assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');

:root {
  /* Transparent white (Paragraphs) */
  --clr-neutral--100: hsla(0, 0%, 100%, 0.75);
  /* Very light gray (Background, Headings, Buttons) */
  --clr-neutral--300: hsl(0, 0%, 95%);
  /*Bright orange (for the first section)*/
  --clr-accent--300: hsl(31, 77%, 52%);
  /*Dark cyan (for the second section)*/
  --clr-accent--500: hsl(184, 100%, 22%);
  /*Very dark cyan (for the third section)*/
  --clr-accent--900: hsl(179, 100%, 13%);
  /* Fonts */
  --ff-primary: 'Lexend Deca', sans-serif;
  --ff-accent: 'Big Shoulders Display', cursive;
  --fs-primary: 1.1rem;
  --br: 1.7em;
  --br2: 0.7em;
}


/*------ Global Settings------*/
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--clr-neutral--300);
  font-family: var(--ff-primary);
  font-size: var(--fs-primary);
  color: var(--clr-neutral--100);
  display: grid;
  grid-template-columns: 1fr 4fr 1fr;
  grid-template-rows: minmax(7vh, 2fr) 5fr 2fr;
  height: 100vh;
  width: 100vw;
}

.main__container {
  grid-column: 2/3;
  grid-row: 2/3;
  justify-self: center;
  align-self: center;
  display: flex;
}

.section {
  padding: 3em;
  min-width: 18rem;
  max-width: 25rem;
  display: grid;
  grid-template-rows: 0.1fr 0.3fr 4fr 1fr;
  gap: 2rem;
}

.section__title {
  font-family: var(--ff-accent);
  text-transform: uppercase;
  font-size: 3rem;
}

.section__description {
  line-height: 1.7;
}

.btn__holder {
  text-transform: capitalize;
  display: flex;
  justify-content: start;
  align-self: center;
}

.btn {
  background-color: var(--clr-neutral--300);
  border-radius: var(--br);
  padding: 0.8em 2em;
  text-align: center;
  font-size: 1rem;
  border: 2px solid var(--clr-neutral--300);
}

.btn-1 {
  color: var(--clr-accent--300);
}

.btn-2 {
  color: var(--clr-accent--500);
}

.btn-3 {
  color: var(--clr-accent--900);
}

.btn:hover,
.btn:focus {
  background-color: transparent;
  color: var(--clr-neutral--300)
}

.section-1 {
  background-color: var(--clr-accent--300);
  border-top-left-radius: var(--br2);
  border-bottom-left-radius: var(--br2);
}

.section-2 {
  background-color: var(--clr-accent--500);
}

.section-3 {
  background-color: var(--clr-accent--900);
  border-top-right-radius: var(--br2);
  border-bottom-right-radius: var(--br2);
}

.footer {
  grid-column: 2/3;
  grid-row: 3/4;
  justify-self: center;
  align-self: center;
}

.attribution {
  font-size: 1.4rem;
  text-align: center;
  color: #525252
}

.attribution a {
  color: hsl(228, 45%, 44%);
}


@media screen and (max-width: 1000px) {
  body {
    grid-template-rows: minmax(10vh, 2fr) 5fr minmax(13vh, 2fr);
  }

  .main__container {
    flex-direction: column;
  }

  .section-1 {
    background-color: var(--clr-accent--300);
    border-top-left-radius: var(--br2);
    border-top-right-radius: var(--br2);
    border-bottom-left-radius: unset;
  }

  .section-3 {
    background-color: var(--clr-accent--900);
    border-top-right-radius: unset;
    border-bottom-left-radius: var(--br2);
    border-bottom-right-radius: var(--br2);
  }
}

@media screen and (max-width: 700px) {
  body {
    grid-template-columns: 0.5fr 4fr 0.5fr;
  }

  .main__container {
    flex-direction: column;
  }

  .section {
    padding: 2.5em;
    grid-template-rows: 0.1fr 0.3fr 2fr 1fr;
    gap: 1.5rem;
  }

  .section__title {
    font-size: 2.5rem;
  }

  .section__description {
    line-height: 1.5;
    font-size: 0.9rem;
  }
}

@media screen and (max-width: 300px) {
  .section {
    padding: 2.5em 1.8em;
    min-width: 10rem;
  }

  .btn {
    padding: 0.5em 1em;
    font-size: 0.8rem;
  }
}

